# quorum-vault-client

./: Cargo.toml  README.md
.github/workflows/: codeball.yaml  validate.yml
examples/: ethereum_wallet.rs  keys.rs  zksnarks.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: api.rs  error.rs  lib.rs
src/api/: ethereum.rs  keys.rs  zksnarks.rs
src/api/ethereum/: requests.rs  responses.rs
src/api/keys/: requests.rs  responses.rs
src/api/zksnarks/: requests.rs  responses.rs
tests/api/: ethereum.rs  keys.rs  mod.rs  zksnarks.rs
