[package]
name = "quorum-vault-client"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/MaximFischuk/quorum-vault-client"
documentation = "https://docs.rs/quorum-vault-client"
description = "A Rust client for Quorum Vault Plugin"
authors = ["Maxim Fischuk <maximusfk@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
vaultrs = "0.6.2"
web3 = "0.18.0"
derive_builder = "0.12.0"
thiserror = "1.0.38"
log = "0.4.17"
serde = "1.0.130"
serde_json = "1.0.91"
rustify = "0.5.3"
rustify_derive = "0.5.2"
eth_checksum = "0.1.2"
base64 = "0.21.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
wiremock = "0.5.17"
