[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quorum-vault-client = { path = "../../" }
tokio = { version = "1.0", features = ["full"] }
vaultrs = "0.6.2"
web3 = "0.18.0"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
